--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#header{
+.same{
     background-color: gray;
     height: 100px;
     color: white;
@@ -7,15 +7,9 @@
 }
 #maincontent{
     background-color: lightblue;
-    height: 400px;
-}
-#footor{
-    background-color: gray;
-    height: 100px;
-    color: white;
+    height: 420px;
+    width: 100%;
     display: flex;
-    align-items: center;
-    
 }
 #navigation{
     background-color: lightcoral;
@@ -30,4 +24,11 @@
     padding: 25px 0px 0px 20px;
     font-size: 25px;
 
+}
+#content{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px 20px;
 }
